--- a/prepros.config
+++ b/prepros.config
@@ -1019,6 +1019,12 @@
         }
       },
       {
+        "file": "#sources/page.kit",
+        "config": {
+          "customOutput": "page.html"
+        }
+      },
+      {
         "file": "#sources/scss/style.scss",
         "config": {
           "customOutput": "css\\style.css"
