Добавлена страница contacts

--- a/prepros.config
+++ b/prepros.config
@@ -69,7 +69,11 @@
           "*.turf",
           "*.ts"
         ],
-        "exceptions": []
+        "exceptions": [
+          "#sources/product_details.kit",
+          "#sources/contacts.kit",
+          "#sources/settings.kit"
+        ]
       }
     },
     "uploader": {
@@ -914,6 +918,12 @@
     },
     "files": [
       {
+        "file": "#sources/contacts.kit",
+        "config": {
+          "customOutput": "contacts.html"
+        }
+      },
+      {
         "file": "#sources/img/avatar.jpg",
         "config": {
           "customOutput": "img\\avatar.jpg"
@@ -1025,9 +1035,21 @@
         }
       },
       {
+        "file": "#sources/product_details.kit",
+        "config": {
+          "customOutput": "product_details.html"
+        }
+      },
+      {
         "file": "#sources/scss/style.scss",
         "config": {
           "customOutput": "css\\style.css"
+        }
+      },
+      {
+        "file": "#sources/settings.kit",
+        "config": {
+          "customOutput": "settings.html"
         }
       }
     ]
